# moljourney

./: LICENSE  Makefile  README.md  pyproject.toml
example/: Lipophilicity1.ipynb
moljourney/: __init__.py  molecules.py  preprocess.py  space.py  tools.py  version.py
moljourney/features/: descriptors.py  fingerprints.py
moljourney/plotting/: bokehplotting.py  mplplotting.py
tests/: test_bokeh.py  test_descriptors.py  test_fingerprint.py  test_molecules.py  test_preprocess.py  test_space.py  test_tools.py
