[tool.poetry]
name = "moljourney"
version = "2023.1.dev1"
description = "A journey through the molecular space"
authors = ["Anders Lervik <andersle@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
rdkit = "^2022.9.5"
jupyter = "^1.0.0"
numpy = "^1.24.2"
scipy = "^1.10.1"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
requests = "^2.28.2"
mordred = "^1.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.259"
black = "^23.1.0"
jupyter-black = "^0.3.3"
pydocstyle = "^6.3.0"
pycodestyle = "^2.10.0"
pylint = "^2.17.2"
mypy = "^1.1.1"

[tool.ruff]
line-length = 78
# pyflakes, pycodestyle, isort, pyupgrade
select = ["F", "E", "W", "I001", "UP"]


[tool.black]
line-length = 78
target-version = ["py310", "py311"]

[tool.mypy]
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["pandas.*", "sklearn.*", "rdkit.*", "mordred.*", "matplotlib.*", "seaborn.*"]
ignore_missing_imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
